080_matrix_templ/grade.txt
Grading at 10/21/2021:15:52:30.575101
For commit ID 01ab7015877b509c24912e51af4a40f8617be484
Grading at Thu Oct 21 11:52:29 EDT 2021
-----------------------------------------------
testcase 1 : Testing with Matrix<int>
...compiling...
In file included from Matrix.h:37:0,
                 from test.cpp:1:
Matrix.cpp: In instantiation of ‘Matrix<T>::Matrix(int, int) [with T = int]’:
test.cpp:20:18:   required from here
Matrix.cpp:12:24: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
   for (size_t i = 0; i < numRows; ++i)
                      ~~^~~~~~~~~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with Matrix<std::string>
...compiling...
In file included from Matrix.h:37:0,
                 from test.cpp:1:
Matrix.cpp: In instantiation of ‘Matrix<T>::Matrix(int, int) [with T = std::__cxx11::basic_string<char>]’:
test.cpp:20:18:   required from here
Matrix.cpp:12:24: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
   for (size_t i = 0; i < numRows; ++i)
                      ~~^~~~~~~~~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with Matrix<(a custom class we wrote)>
...compiling...
In file included from Matrix.h:37:0,
                 from test.cpp:1:
Matrix.cpp: In instantiation of ‘Matrix<T>::Matrix(int, int) [with T = Tester]’:
test.cpp:20:18:   required from here
Matrix.cpp:12:24: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
   for (size_t i = 0; i < numRows; ++i)
                      ~~^~~~~~~~~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
--------------------------------------------
Preparing to test assert fails...
Compiling assertion failure tester...
In file included from Matrix.h:37:0,
                 from testAbort.cpp:1:
Matrix.cpp: In instantiation of ‘Matrix<T>::Matrix(int, int) [with T = int]’:
testAbort.cpp:28:27:   required from here
Matrix.cpp:12:24: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
   for (size_t i = 0; i < numRows; ++i)
                      ~~^~~~~~~~~
cc1plus: all warnings being treated as errors
This code did not compile. Skipping remaining tests.

Overall Grade: F
